<resources>
    <string name="app_name">My Application</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">email</string>
    <string name="minimum_password">Password too short , enter minimum 6 characters!</string>
    <string name="auth_failed">Authentificaton failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="email_id">Enter email ID</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="prompt_password">Enter password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_Link_to_register">Not a member? Get registerd in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset password</string>
    <string name="Dear_Diary">Dear Diary</string>
    <string name="btn_back"><![CDATA[<<Back]]></string>
    <string name="hint_new_email">New Emai</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_LOAD">Load file</string>
    <string name="btn_SAVE">Save data</string>
    <string name="forgot_pasword_msg">We just need your registered email Id to sent you password reset nstructions</string>
    <string name="hint_type_here">Type here</string>

</resources>