<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActvity.SignUpActivity">

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

   <Imageview
       android:layout_width="@dimen/logo_w_h"
       android:layout_height="@dimen/logo_w_h"
       android:layout_gravity="center_horizontal"
       android:layout_marginBottom="30dp"
       android:src="@mipmap/ic_launcher"
       android:contentDescription=""
       tools:ignore="ContentDescription"/>

   <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:hint="@string/email"
        android:inputType="textPassword" />


   <EditText
       android:id="@+id/password"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:focusableInTouchMode="true"
       android:hint="@string/hint_password"
       android:imeOptions="actionUnspecified"
       android:inputType="textPassword" />

   <Button
       android:id="@+id/sign_up_button"
       style="?android:textAppearanceSmall"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_marginTop="16dp"
       android:text="@string/action_sign_in_short"
       android:textStyle="bold" />


   <Button
       android:id="@+id/btn_reset_password"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:background="@null"
       android:text="@string/btn_reset_password" />

   <Button
       android:id="@+id/sign_in_button"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:text="@string/btn_link_to_login"
       android:textSize="15sp" />


</LinearLayout>

<ProgressBar
    android:id="@+id/progressbar"
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_gravity="center|bottom"
    android:layout_marginBottom="20dp"
    android:visibility="gone" />



</android.support.constraint.ConstraintLayout>


















