<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:id= "@+id/old_email"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:layout_above="@+id/password"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="82dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="125dp"
        android:imeActionId="@+id/login"
        android:imeOptions="actionUnspecified"
        android:layout_toEndOf="@+id/progressBar"
        android:layout_toRightOf="@+id/progressBar" />

    <EditText
        android:id="@+id/newpassword"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:hint="@string/new_pass"
        android:imeActionId="@+id/login"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="160dp"
        android:layout_above="@+id/changePass"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>

    <Button
        android:id="@+id/changePass"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="200"
        tools:layout_editor_absoluteY="150" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/remove"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_remove"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="250dp"
        tools:layout_editor_absoluteY="200dp"
        android:layout_above="@+id/change_password_button"
        android:layout_alignStart="@+id/changePass"
        android:layout_alignLeft="@+id/changePass"/>

    <Button
        android:id="@+id/change_password_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/change_password"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="400dp"
        android:layout_above="@+id/sign_out"
        android:layout_alignStart="@+id/remove_user_button"
        android:layout_alignLeft="@+id/remove_user_button" />

    <Button
        android:id="@+id/remove_user_button"
        style="?android:textAppearanceSmall"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/remove_user"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="400dp"
        android:layout_above="@+id/sign_out"
        android:layout_alignLeft="@+id/sign_out"
        android:layout_alignStart="@+id/sign_out" />

    <Button
        android:id="@+id/sign_out"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/btn_sign_out"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="450dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/useremail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/old_email"
        android:layout_alignEnd="@+id/changePass"
        android:layout_alignRight="@+id/changePass"
        android:layout_marginBottom="50dp"
        android:hint="@string/email_id" />


</RelativeLayout>

</android.support.constraint.ConstraintLayout>