<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActvity.LoginActivity">


<LinearLayout
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/colorPrimary"
android:gravity="center"
android:orientation="vertical"
android:padding="@dimen/activity_horizontal_margin">

  <ImageView
    android:layout_width="@dimen/logo_w_h"
    android:layout_height="@dimen/logo_w_h"
    android:layout_gravity="center"
    android:layout_marginBottom="30dp"
    android:src="@mipmap/ic_launcher_round"
    android:contentDescription=""
    tools:ignore="ContentDescription" />

  <EditText
    android:id="@+id/email"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:hint="@string/hint_email"
    android:inputType="textEmailAddress"
    android:textColor="@android:color/white"
    android:textColorHint="@android:color/black" />

  <EditText
    android:id="@+id/password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:hint="@string/hint_password"
    android:inputType="textPassword"
    android:textColor="@android:color/white"
    android:textColorHint="@android:color/black"/>

<!--Login Button-->

  <Button
    android:id="@+id/btn_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:background="@color/colorAccent" />

  <Button
    android:id="@+id/btn_reset_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:text="@string/btn_forgot_password"
    android:textColor="@color/colorAccent"
    android:textAllCaps="false"
    android:textSize="15dp" />

<!-- Link to Login Screen -->

  <Button
    android:id="@+id/btn_signup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="22dp"
    android:background="@color/white"
    android:text="@string/btn_Link_to_register"
    android:textAllCaps="false"
    android:textColor="@color/colorPrimaryDark"
    android:textSize="15dp"
    tools:ignore="SpUsage"/>

  <ProgressBar
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_gravity="center|bottom"
    android:visibility="gone"
    tools:layout_editor_absoluteX="142dp"
    tools:layout_editor_absoluteY="162dp" />

</LinearLayout>

</android.support.constraint.ConstraintLayout>